syntax = "proto3";
package nicholasdotsol.duality.dex;

option go_package = "github.com/NicholasDotSol/duality/x/dex/types";
import "gogoproto/gogo.proto";

message LimitOrderPoolUserSharesFilled {
  uint64 count = 1; 
  string address = 2; 
  string sharesFilled = 3  [
      (gogoproto.moretags)   = "yaml:\"sharesFilled\"",
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable)   = false,
      (gogoproto.jsontag) = "sharesFilled"
  ]; 
  
}

